<resources>
    <string name="app_name">SMStoMAIL</string>
    <!-- Main fragment -->
    <string name="permissions_sms_denied_text">The application requires permission to read SMS</string>
    <string name="permissions_notifications_denied_text">The application requires permission to send notifications</string>
    <string name="permissions_request_button_text">Grant permissions</string>
    <string name="settings_text">Settings</string>
    <string name="filters_text">Filters</string>
    <string name="settings_hide_button_text">Hide settings</string>
    <string name="receiver_enabled_text">SMS forwarding is enabled.</string>
    <string name="receiver_disabled_text">SMS forwarding is disabled.</string>
    <string name="test_mail_title">Test title</string>
    <string name="test_mail_body">Test body</string>

    <!-- Settings fragment -->
    <string name="login_label">Login:</string>
    <string name="password_label">Password:</string>
    <string name="sender_section_text">Sender email</string>
    <string name="other_section_text">Other</string>
    <string name="recipients_label">Recipients:</string>
    <string name="apply_settings_button_text">Apply&amp;Test</string>
    <string name="save_button_text">Save</string>
    <string name="add_button_text">Add</string>
    <string name="reset_settings_button_text">Reset</string>
    <string name="smtp_server_label">SMTP Server:</string>
    <string name="ssl_port_label">SSL port:</string>

    <!-- Filters -->
    <string name="sender_include_filter_type_text">Sender include</string>
    <string name="sender_exclude_filter_type_text">Sender exclude</string>
    <string name="message_include_filter_type_text">Message include</string>
    <string name="message_exclude_filter_type_text">Message exclude</string>

    <!-- Notifications -->
    <string name="toast_test_email_successful">Test successful</string>
    <string name="toast_test_email_fail">Test failed</string>
    <string name="notification_channel_name">Email sending error</string>
    <string name="notification_channel_description">Used to describe errors that occur when sending an email</string>
    <string name="error_incorrect_address">Check recipients email addresses (%1$s)</string>
    <string name="error_unexpected">Something gone wrong while send mail to %1$s</string>
    <string name="error_connecting">Couldn\'t connect to host</string>
    <string name="error_authentication">Authentication failed. Please check login and password</string>

    <!-- General -->
    <string name="enable_text">Enable</string>
    <string name="disable_text">Disable</string>
    <string name="back_button">Back</string>
</resources>
