...
            onValueChange = { newValue ->
                onUpdateItem(item.id, item.type, newValue)
            },
            isError = item.value.isEmpty(),
            modifier = Modifier
                .weight(1f)
                .testTag("filterTextField")
        )
        DropdownMenu(
            expanded = expanded,
            onDismissRequest = {
                expanded = false
            }
...
                onRemoveButtonClicked(item.id)
            },
            modifier = Modifier
                .size(
                    dimensionResource(R.dimen.icon_button_size_small)
                )
                .testTag("removeFilterButton")
        ) {
            Icon(
                imageVector = Icons.Filled.Clear,
                tint = Color.Red,
                contentDescription = null,
                modifier = Modifier
...
